Updated the home page: fixed overflow for mobile devices

--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 /*------------General-------------*/
 html, body {
     height: 100%;
+    overflow-x: hidden;
 }
 
 body {
